hasOwnProperty returns true for out of bounds property index on TypedArray https://bugs.webkit.org/show_bug.cgi?id=187520

Reviewed by Saam Barati.

JSTests:

getOwnPropertySlot returns true on out of bounds indicies for
TypedArrays, which is incorrect.

* stress/typedarray-hasOwnProperty-out-of-bounds.js: Added.
(test):

Source/JavaScriptCore:

* runtime/JSGenericTypedArrayViewInlines.h:
(JSC::JSGenericTypedArrayView<Adaptor>::getOwnPropertySlot):


Canonical link: https://commits.webkit.org/202772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233718 268f45cc-cd09-0410-ab3c-d52691b4dbfc